# customer-satisfaction-ecommerce

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
data/cleaned/: products.csv
notebooks/: 01_data_cleaning.ipynb  02_data_integration_preprocessing.ipynb  03_feature_engineering.ipynb  04_customer-satisfaction-analysis.ipynb  data_overview_cleaning.ipynb  explore_brazilian.ipynb
