[project]
name = "stackfuelpp"
version = "0.1.0"
description = "I will add a description later, but first want to see how it looks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "ruff>=0.12.0",
    "seaborn>=0.13.2",
]
